# blitz-script

./: Examples.md  README.md
examples/: WinErrorSystemMyTake.btz  appopen.btz  bsod test.btz  dialogue box.btz  explorer death.btz  multicommandtest.btz  random tab.btz  response.btz  revive explorer.btz
src/: CMakeLists.txt  main.c
